@startuml

title __DASHBOARD's Class Diagram__\n

  namespace be.kuleuven.travelrecipe {
    namespace models.dashboard {
      abstract class be.kuleuven.travelrecipe.models.dashboard.AbstractDashboard {
          + setRecipeNotifier()
      }
    }
  }
  

  namespace be.kuleuven.travelrecipe {
    namespace models.dashboard {
      class be.kuleuven.travelrecipe.models.dashboard.Dashboard {
          {static} - A_Z : int
          {static} - DATE_ASC : int
          {static} - DATE_DESC : int
          {static} - Z_A : int
          - dashboard : List<RecipeInfo>
          + Dashboard()
          + addRecipe()
          + addRecipes()
          + clearRecipes()
          + deleteRecipe()
          + filterList()
          + getAllRecipes()
          + getRecipeInfo()
          + setDashboard()
          + sortList()
      }
    }
  }
  

  be.kuleuven.travelrecipe.models.dashboard.AbstractDashboard o-- be.kuleuven.travelrecipe.notifier.RecipeNotifier : recipeNotifier
  be.kuleuven.travelrecipe.models.dashboard.Dashboard -up-|> be.kuleuven.travelrecipe.models.dashboard.AbstractDashboard


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
